--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "sass-loader": "^7.1.0",
     "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2"
+  },
+  "dependencies": {
+    "bootstrap": "^4.0.0-alpha.6"
   }
 }
