--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0-alpha.6"
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.5"
   }
 }
